Fixed the navbar's visibility on other pages and started styling the about page.

--- a/TeamProject/ResuMeta/wwwroot/css/site.css
+++ b/TeamProject/ResuMeta/wwwroot/css/site.css
@@ -26,7 +26,7 @@ body {
 
 li:not(.nav-login-item) > .nav-link span {
   visibility: hidden;
-  opacity: 0;
+  opacity: 1;
   position: relative;
   left: -10px;
   transition: visibility 0s, opacity 0.5s linear, left 0.5s;
@@ -306,6 +306,11 @@ option:hover {
   color: rgb(207, 207, 207) !important;
   border: none !important;
 }
+
+.navbar *{
+  opacity: 1;
+}
+
 
 .alert-success{
   background-color: #e9912c !important;
